--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -14,7 +14,8 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-file-system": "~16.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
