--- a/hackathon/app.json
+++ b/hackathon/app.json
@@ -26,7 +26,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    plugins: {
+    "plugins": {
         [
             "expo-image-picker",
             {
