--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -13,15 +13,16 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "expo": "~50.0.5",
+    "expo-camera": "^14.0.3",
+    "expo-file-system": "~16.0.5",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-navigation-stack": "^2.10.4",
-    "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.5"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
