install expo map and location

--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -21,7 +21,9 @@
     "react-native-screens": "~3.29.0",
     "react-navigation-stack": "^2.10.4",
     "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.5"
+    "expo-file-system": "~16.0.5",
+    "react-native-maps": "1.10.0",
+    "expo-location": "~16.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
