--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -14,8 +14,6 @@
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-camera": "^14.0.3",
-    "expo-file-system": "~16.0.5",
-    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
@@ -25,7 +23,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-file-system": "~16.0.5",
     "react-native-maps": "1.10.0",
-    "expo-location": "~16.5.2"
+    "expo-location": "~16.5.2",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
