--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -9,21 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.6.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-camera": "^14.0.3",
+    "expo-file-system": "~16.0.5",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.5",
-    "react-native-maps": "1.10.0",
-    "expo-location": "~16.5.2",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
