--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
